// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner euiLoadingSpinner--medium testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  class="euiLoadingSpinner euiLoadingSpinner--large"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  class="euiLoadingSpinner euiLoadingSpinner--medium"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  class="euiLoadingSpinner euiLoadingSpinner--small"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  class="euiLoadingSpinner euiLoadingSpinner--xLarge"
/>
`;
